--- a/css/style.css
+++ b/css/style.css
@@ -820,6 +820,10 @@ video {
   
   /* Responsive styles */
   @media (max-width: 576px) {
+    .back-to-top {
+        right: 50px;
+    }
+
     #chat-widget {
       width: 80%;
       height: 300px;
@@ -831,7 +835,7 @@ video {
     #whatsapp-button {
       width: 50px;
       height: 50px;
-      bottom: 20px;
+      bottom: 25px;
       right: 10px;
     }
   
