--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ h5 {
     bottom: 25px;
     z-index: 110;
 }
+@media (max-width: 576px) {
+    .back-to-top {
+        right: 75px;
+    }
+}
 
 
 /*** Spinner ***/
@@ -820,11 +825,7 @@ video {
   
   /* Responsive styles */
   @media (max-width: 576px) {
-    .back-to-top {
-        right: 75px;
-    }
-
-    #chat-widget {
+   #chat-widget {
       width: 75%;
       height: 300px;
       bottom: 100px;
